# pvr.emby.old

./: .gitignore  CMakeLists.txt  README.md
pvr.emby/: addon.xml  addon.xml.in
pvr.emby/resources/: settings.xml
pvr.emby/resources/language/resource.language.en_gb/: strings.po
pvr.emby/resources/language/resource.language.en_us/: strings.po
src/: PVREmby.cpp  PVREmby.h  PVREmbyData.cpp  PVREmbyData.h  client.cpp
